# graphics-coursework-raytracing

./: Camera.hs  Geometry.hs  Main.hs  Makefile  README.md  Raytracer.hs  Raytracing.hs  Scene.hs  SceneParser.hs  depth1.ppm  depth2.ppm  depth3.ppm  depth4.ppm  depth5.ppm  depth6.ppm  raytracing-template-haskell.tar  raytracing.cabal  scene1.ppm  scene2.ppm  scene3.ppm  scene4.ppm  scene5.ppm  scene6.ppm
scenes/: scene6.txt
test/: SceneParserTest.hs  Tests.hs
