name:          raytracing
version:       0.1.0
license:       AllRightsReserved
author:        Niklas Hambüchen <mail@nh2.me>
category:      Graphics
build-type:    Simple
cabal-version: >= 1.10


executable raycast
  main-is:
    Main.hs
  build-depends:
      base < 5
    , attoparsec >= 0.10
    , bytestring >= 0.9
    , optparse-applicative >= 0.5.0.0
    , linear >= 0.9
    , placeholders >= 0.1
    , parsec >= 3.1
    , parsec-numbers >= 0.0.4
    , AC-PPM >= 1.1.1
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall
